discussion/kv_engine/179545/179545_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51979: Support unmetered collections

Utilise Cookie::currentCollectionInfo to retrieve from the engine
a collection operation's metering state and use that flag in the
code which updates the usage.

Update MeteringTest so that it creates an unmetered collection
and runs a new variant against that collection.

Currently GetRandomKey and RangeScanContinue will fail as they don't
set the metered state on Cookie::currentCollectionInfo

Change-Id: Iebb0432de6a0b8f549e54ade5d3d4549d9533fff

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-09-12 15:00:44.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-12 16:05:41.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20324/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/manifest.h:49:66: error: cannot initialize a member subobject of type "Collections::Metered" with an rvalue of type "bool" [clang-diagnostic-error]
        CollectionID::Default, "_default", {}, ScopeID::Default, true};
                                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/vbucket_manifest_handles.h:510:16: error: cannot initialize return object of type "bool" with an rvalue of type "Collections::Metered" [clang-diagnostic-error]
        return itr->second.isMetered();
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/vbucket_manifest_handles.h:614:16: error: cannot initialize return object of type "bool" with an rvalue of type "Collections::Metered" [clang-diagnostic-error]
        return itr->second.isMetered();
               ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20324/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/manifest.h:49:66:
error: cannot initialize a member subobject of type "Collections::Metered" with an rvalue of type "bool" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20324/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49308/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\collections/manifest.h(49): error C2440: "initializing": cannot convert from "bool" to "Collections::Metered" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49308/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41446/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/collections/manifest.h:49:66:
error: cannot initialize a member subobject of type "Collections::Metered" with an rvalue of type "bool"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41446/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23420/ : FAILURE

Compile error at [2022-09-12T15:27:32.484Z] ../kv_engine/engines/ep/src/collections/manifest.h:49:66:
error: cannot initialize a member subobject of type "Collections::Metered" with an rvalue of type "bool"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23420/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22296/ : FAILURE

Compile error at [2022-09-12T15:29:01.849Z] ../kv_engine/engines/ep/src/collections/manifest.h:49:70:
error: cannot convert ?bool? to ?Collections::Metered? in initialization
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22296/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30697/ : FAILURE

Compile error at [2022-09-12T15:35:05.075Z] ../kv_engine/engines/ep/src/collections/manifest.h:49:66:
error: cannot initialize a member subobject of type "Collections::Metered" with an rvalue of type "bool"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30697/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22656/ : FAILURE

Compile error at [2022-09-12T15:33:28.329Z] ../kv_engine/engines/ep/src/collections/manifest.h:49:70:
error: cannot convert ?bool? to ?Collections::Metered? in initialization
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22656/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21652/ : FAILURE

Compile error at [2022-09-12T16:05:34.782Z] ../kv_engine/engines/ep/src/collections/manifest.h:49:66:
error: cannot initialize a member subobject of type "Collections::Metered" with an rvalue of type "bool"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21652/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10032/ : FAILURE

Compile error at [2022-09-12T15:22:33.212Z] ../kv_engine/engines/ep/src/collections/manifest.h:49:66:
error: cannot initialize a member subobject of type "Collections::Metered" with an rvalue of type "bool"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10032/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10130/ : FAILURE

Compile error at [2022-09-12T15:15:31.061Z] ../kv_engine/engines/ep/src/collections/manifest.h:49:70:
error: cannot convert ?bool? to ?Collections::Metered? in initialization
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10130/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19546/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
